<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_company">"
Copyright © 2006-2016, ViPER ACOUSTIC. All rights reserved. 
Without the official permission, commercial use is disallowed."</string>
    <string name="about_exit">Exit</string>
    <string name="about_forum">Official forum: forum.vipersaudio.com</string>
    <string name="about_version">Version %1$s (FX), Codename Beautiful</string>
    <string name="app_name">ViPER4Android FX</string>
    <string name="bluetooth_title">Bluetooth Device</string>
    <string name="dsp_settings_bluetooth">Effect Settings - Bluetooth Device</string>
    <string name="dsp_settings_headset">Effect Settings - Headset</string>
    <string name="dsp_settings_speaker">Effect Settings - Phone Speaker</string>
    <string name="dsp_settings_usb">Effect Settings - USB Device</string>
    <string name="eq_preset_acoustic">Acoustic</string>
    <string name="eq_preset_bass_booster">Bass Booster</string>
    <string name="eq_preset_bass_reducer">Bass Reducer</string>
    <string name="eq_preset_classical">Classical</string>
    <string name="eq_preset_custom">Custom</string>
    <string name="eq_preset_deep">Deep</string>
    <string name="eq_preset_flat">Flat</string>
    <string name="eq_preset_r_and_b">R&amp;B</string>
    <string name="eq_preset_rock">Rock</string>
    <string name="eq_preset_small_speakers">Small Speakers</string>
    <string name="eq_preset_treble_booster">Treble Booster</string>
    <string name="eq_preset_treble_reducer">Treble Reducer</string>
    <string name="eq_preset_vocal_booster">Vocal Booster</string>
    <string name="headset_title">Headset</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="pref_analogx_strength_title">Select Strength</string>
    <string name="pref_analogx_title">AnalogX</string>
    <string name="pref_colorfulmusic_title">Field Surround</string>
    <string name="pref_convolver_crosschannel_title">Select Cross Channel</string>
    <string name="pref_convolver_knl">Impulse Response</string>
    <string name="pref_convolver_knl_title">Select Impulse Response</string>
    <string name="pref_convolver_title">Convolver</string>
    <string name="pref_curesystem_title">Auditory System Protection</string>
    <string name="pref_diffsurr_title">Differential Surround</string>
    <string name="pref_dynamicsystem_bass">Select Dynamic Bass</string>
    <string name="pref_dynamicsystem_output">Listening Device</string>
    <string name="pref_dynamicsystem_output_title">Select Listening Device</string>
    <string name="pref_dynamicsystem_title">Dynamic System</string>
    <string name="pref_dynamicsystem_tube_title">Tube Sound Simulator (6N1J)</string>
    <string name="pref_effect_title">Select Effect Strength</string>
    <string name="pref_equalizer_preset_title">Select Preset</string>
    <string name="pref_equalizer_title">FIREqualizer</string>
    <string name="pref_fetcompressor_adapt">Adapt</string>
    <string name="pref_fetcompressor_attack">Attack</string>
    <string name="pref_fetcompressor_autoattack">Auto Attack</string>
    <string name="pref_fetcompressor_autogain">Automatic Gain</string>
    <string name="pref_fetcompressor_autoknee">Auto Knee</string>
    <string name="pref_fetcompressor_autorelease">Auto Release</string>
    <string name="pref_fetcompressor_crest">Crest</string>
    <string name="pref_fetcompressor_gain">Gain</string>
    <string name="pref_fetcompressor_knee">inflection</string>
    <string name="pref_fetcompressor_kneemulti">inflection point gain</string>
    <string name="pref_fetcompressor_maxattack">Maximum Attack</string>
    <string name="pref_fetcompressor_maxrelease">Maximum Release</string>
    <string name="pref_fetcompressor_noclipenable">prevent clipping</string>
    <string name="pref_fetcompressor_ratio">compression ratio</string>
    <string name="pref_fetcompressor_release">Release</string>
    <string name="pref_fetcompressor_threshold">work threshold</string>
    <string name="pref_fetcompressor_title">FET Compressor</string>
    <string name="pref_fidelity_vb_bassfreq_title">Select Bass Frequency</string>
    <string name="pref_fidelity_vb_bassgain_title">Select Bass Boost</string>
    <string name="pref_fidelity_vb_mode_title">Select Bass Mode</string>
    <string name="pref_fidelity_vb_title">ViPER Bass</string>
    <string name="pref_fidelity_vc_bassgain_title">Select Clarity</string>
    <string name="pref_fidelity_vc_mode_title">Select Clarity Mode</string>
    <string name="pref_fidelity_vc_title">ViPER Clarity</string>
    <string name="pref_fx_limiter_threshold">Limit Threshold</string>
    <string name="pref_fx_limiter_title">Master Gate (Limiter)</string>
    <string name="pref_fx_master_title">Master Power</string>
    <string name="pref_output_gain">Output Gain</string>
    <string name="pref_output_pan">Channel Pan</string>
    <string name="pref_playback_maxgain">Max Gain</string>
    <string name="pref_playback_output_threshold">Max Output</string>
    <string name="pref_playback_title">Playback Gain Control</string>
    <string name="pref_reverb_damp">Damping Factor</string>
    <string name="pref_reverb_dry">Dry Signal</string>
    <string name="pref_reverb_roomsize">Room Size</string>
    <string name="pref_reverb_title">Reverberation</string>
    <string name="pref_reverb_wet">Wet Signal</string>
    <string name="pref_reverb_width">Sound Field</string>
    <string name="pref_select_colorfulmusic_mi_title">Select Mid Image Strength</string>
    <string name="pref_select_colorfulmusic_title">Select Field Surround Strength</string>
    <string name="pref_select_cure_cf_title">Select Binaural Level</string>
    <string name="pref_select_diffsurr_ms_title">Select Delay Time</string>
    <string name="pref_select_vhs_qual_title">Select Effect Level</string>
    <string name="pref_spk_opt_title">Speaker Optimization</string>
    <string name="pref_spkfx_limiter_threshold">Limit Threshold</string>
    <string name="pref_spkfx_limiter_title">Master Gate (Limiter)</string>
    <string name="pref_spkfx_master_title">Master Power</string>
    <string name="pref_vhs_title">Headphone Surround +</string>
    <string name="pref_viperddc_device">Listening Device</string>
    <string name="pref_viperddc_device_manufacturer">Select Manufacturer</string>
    <string name="pref_viperddc_device_model">Select Model</string>
    <string name="pref_viperddc_tips">"NOTICE: 
ViPER-DDC is a true Hi-Fi audio processor and is used for headset correction. 
ViPER-DDC now supports nearly 500 headphones, and will continue to support more as time goes on. 
If you can't find your headset in the list, please disable this feature until yours is added."</string>
    <string name="pref_viperddc_title">ViPER-DDC</string>
    <string name="pref_vse_strength_title">Select Strength</string>
    <string name="pref_vse_tips">"NOTICE: 
Spectrum extension is a true Hi-Fi audio processor and it is used for extending the lossy compressed spectrum. 
If you are playing lossy compressed music(such mp3, aac, ogg), this feature may give a lossless feeling. 
However, if you are playing lossless music, we recommend you to disable this feature."</string>
    <string name="pref_vse_title">Spectrum Extension</string>
    <string name="pref_xloud_output_amplifer">Output Gain</string>
    <string name="pref_xloud_spk_highfreq">High Response</string>
    <string name="pref_xloud_spk_lowfreq">Low Response</string>
    <string name="pref_xloud_title">eXtra Loud</string>
    <string name="speaker_title">Phone Speaker</string>
    <string name="text_abnormal">Abnormal</string>
    <string name="text_about_title">About and credits</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_changelog">Changelog</string>
    <string name="text_checkupdate">Check Update</string>
    <string name="text_close">Off</string>
    <string name="text_close_developer">Turn off developer mode</string>
    <string name="text_close_selinux">Disable SELinux</string>
    <string name="text_close_selinux_msg">This will temporarily disable SELinux, which will be re-enabled upon device restart. Only proceed if other attempts to enable ViPERFX audio processing have failed and please consider security implications!</string>
    <string name="text_commode">FX Compatible Mode</string>
    <string name="text_db">dB</string>
    <string name="text_default_storage">Set default storage</string>
    <string name="text_disabled">Disabled</string>
    <string name="text_down_ready">Ready for download</string>
    <string name="text_down_state">Downloading: %s</string>
    <string name="text_drv_blank" />
    <string name="text_drv_status">Driver Status</string>
    <string name="text_drv_status_view">"
 
Driver Version: %1$s 
NEON Enabled: %2$s 
Enabled: %3$s 
Status: %4$s 
Audio Format: %5$s 
Processing: %6$s 
Sampling Rate: %7$d 
"</string>
    <string name="text_drvinst_acquireroot">"Driver install failed: V4A couldn't acquire root permission. Please confirm your device has been rooted."</string>
    <string name="text_drvinst_busybox_not_installed">Driver install failed: No proper busybox installation found on this device.</string>
    <string name="text_drvinst_cfg_unsup">Driver install failed: Unsupported android system or ROM.</string>
    <string name="text_drvinst_dataioerr">Driver install failed: I/O error, please reboot and try again.</string>
    <string name="text_drvinst_failed">"Driver install failed: The busybox installation found on your device does not work. 
This usually means you installed a wrong or broken busybox. V4A needs Stericson's busybox to work. 
If you are sure you installed the proper busybox, then please confirm your device has been completely rooted."</string>
    <string name="text_drvinst_ok">Driver installed, please reboot your device.</string>
    <string name="text_enter_developer">Enter developer mode</string>
    <string name="text_help_title">Help</string>
    <string name="text_loadfxprofile">Load Effect Profile</string>
    <string name="text_lockeffect">Lock Effect Mode</string>
    <string name="text_open">On</string>
    <string name="text_savefxprofile">Save Effect Profile</string>
    <string name="text_setting">Settings</string>
    <string name="text_showtrayicon">Show Notification</string>
</resources>