<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@id/v4a_about_icon"
        android:layout_width="90.0dip"
        android:layout_height="90.0dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65.0dip"
        android:src="@mipmap/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/v4a_about_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35.0dip"
        android:text="@string/app_name"
        android:textSize="18.0sp" />

    <TextView
        android:id="@id/v4a_about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/v4a_about_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65.0dip"
        android:text="@string/app_name" />

    <TextView
        android:layout_width="250.0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45.0dip"
        android:gravity="center"
        android:text="@string/about_company"
        android:textColor="@color/secondaryTextColor"
        android:textSize="12.0sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15.0dip"
        android:text="@string/about_forum"
        android:textSize="12.0sp" />
</RelativeLayout>