<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:paddingBottom="45.0dip">

        <TextView
            android:id="@id/v4a_tv_dynamicsystem_output"
            android:layout_width="wrap_content"
            android:layout_height="45.0dip"
            android:layout_marginTop="35.0dip"
            android:textColor="@color/fragment_text_color"
            android:gravity="center"
            android:text="@string/pref_dynamicsystem_output_title" />

        <Button
            android:id="@id/id_btn_dynamicsystem_output"
            android:layout_width="150.0dip"
            android:layout_height="45.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/v4a_tv_dynamicsystem_output"
            android:background="@drawable/select_btn"
            android:gravity="center"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip"
            android:singleLine="true"
            android:text="@string/pref_dynamicsystem_output" />

        <TextView
            android:id="@id/v4a_tv_dynamicsystem_bass"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_below="@id/id_btn_dynamicsystem_output"
            android:layout_marginTop="35.0dip"
            android:textColor="@color/fragment_text_color"
            android:gravity="center"
            android:text="@string/pref_dynamicsystem_bass" />

        <TextView
            android:id="@id/v4a_tv_dynamicsystem_bass_val"
            android:layout_width="100.0dip"
            android:layout_height="35.0dip"
            android:layout_alignTop="@id/v4a_tv_dynamicsystem_bass"
			android:layout_alignParentRight="true"
            android:background="@drawable/input"
            android:textColor="@color/fragment_text_color"
            android:gravity="center" />

        <com.audlabs.viperfx.widget.TouchRotateButton
            android:id="@id/v4a_trb_dynamicsystem_bass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/v4a_tv_dynamicsystem_bass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25.0dip" />

        <com.audlabs.viperfx.widget.ProgressBarView
            android:id="@id/v4a_pbv_dynamicsystem_bass"
            android:layout_width="230.0dip"
            android:layout_height="230.0dip"
            android:layout_below="@id/v4a_tv_dynamicsystem_bass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25.0dip" />
    </RelativeLayout>
</ScrollView>