<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:paddingBottom="45.0dip">

        <TextView
            android:id="@id/id_tv_reverb_roomsize"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="35.0dip"
            android:gravity="center"
            android:text="@string/pref_reverb_roomsize" />

        <TextView
            android:id="@id/id_tv_reverb_roomsize_val"
            android:layout_width="100.0dip"
            android:layout_height="35.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/id_tv_reverb_roomsize"
            android:layout_marginRight="15.0dip"
            android:background="@mipmap/input"
            android:gravity="center" />

        <SeekBar
            android:id="@id/id_sb_reverb_roomsize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_tv_reverb_roomsize"
            android:layout_marginLeft="27.0dip"
            android:layout_marginTop="18.5dip"
            android:focusable="true"
            android:max="100"
            android:maxHeight="5.0dip"
            android:minHeight="5.0dip"
            android:progressDrawable="@drawable/default_seekbar" />

        <TextView
            android:id="@id/id_tv_reverb_width"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_below="@id/id_sb_reverb_roomsize"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="35.0dip"
            android:gravity="center"
            android:text="@string/pref_reverb_width" />

        <TextView
            android:id="@id/id_tv_reverb_width_val"
            android:layout_width="100.0dip"
            android:layout_height="35.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/id_tv_reverb_width"
            android:layout_marginRight="15.0dip"
            android:background="@mipmap/input"
            android:gravity="center" />
        -

        <SeekBar
            android:id="@id/id_sb_reverb_width"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_tv_reverb_width"
            android:layout_marginLeft="27.0dip"
            android:layout_marginTop="18.5dip"
            android:focusable="true"
            android:max="100"
            android:maxHeight="5.0dip"
            android:minHeight="5.0dip"
            android:progressDrawable="@drawable/default_seekbar" />

        <TextView
            android:id="@id/id_tv_reverb_damp"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_below="@id/id_sb_reverb_width"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="35.0dip"
            android:gravity="center"
            android:text="@string/pref_reverb_damp" />

        <TextView
            android:id="@id/id_tv_reverb_damp_val"
            android:layout_width="100.0dip"
            android:layout_height="35.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/id_tv_reverb_damp"
            android:layout_marginRight="15.0dip"
            android:background="@mipmap/input"
            android:gravity="center" />
        -

        <SeekBar
            android:id="@id/id_sb_reverb_damp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_tv_reverb_damp"
            android:layout_marginLeft="27.0dip"
            android:layout_marginTop="18.5dip"
            android:focusable="true"
            android:max="100"
            android:maxHeight="5.0dip"
            android:minHeight="5.0dip"
            android:progressDrawable="@drawable/default_seekbar" />

        <TextView
            android:id="@id/id_tv_reverb_wet"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_below="@id/id_sb_reverb_damp"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="35.0dip"
            android:gravity="center"
            android:text="@string/pref_reverb_wet" />

        <TextView
            android:id="@id/id_tv_reverb_wet_val"
            android:layout_width="100.0dip"
            android:layout_height="35.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/id_tv_reverb_wet"
            android:layout_marginRight="15.0dip"
            android:background="@mipmap/input"
            android:gravity="center" />
        -

        <SeekBar
            android:id="@id/id_sb_reverb_wet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_tv_reverb_wet"
            android:layout_marginLeft="27.0dip"
            android:layout_marginTop="18.5dip"
            android:focusable="true"
            android:max="100"
            android:maxHeight="5.0dip"
            android:minHeight="5.0dip"
            android:progressDrawable="@drawable/default_seekbar" />

        <TextView
            android:id="@id/id_tv_reverb_dry"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_below="@id/id_sb_reverb_wet"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="35.0dip"
            android:gravity="center"
            android:text="@string/pref_reverb_dry" />

        <TextView
            android:id="@id/id_tv_reverb_dry_val"
            android:layout_width="100.0dip"
            android:layout_height="35.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/id_tv_reverb_dry"
            android:layout_marginRight="15.0dip"
            android:background="@mipmap/input"
            android:gravity="center" />

        <SeekBar
            android:id="@id/id_sb_reverb_dry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_tv_reverb_dry"
            android:layout_marginLeft="27.0dip"
            android:layout_marginTop="18.5dip"
            android:focusable="true"
            android:max="100"
            android:maxHeight="5.0dip"
            android:minHeight="5.0dip"
            android:progressDrawable="@drawable/default_seekbar" />
    </RelativeLayout>
</ScrollView>